--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,22 @@ button{
 
 }
 
+.box{
+  border-style: solid;
+  border-color: black;
+  border-radius: 8px;
+  margin-left: 500px;
+  margin-right: 500px;
+  margin-bottom: 15px;
+}
+
+.red{
+  color: red;
+}
+
+.blue{
+  color:green;
+}
 
 .App {
   text-align: center;
